add css header beginning

--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <header class="header-main">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus cum earum dolor laboriosam facilis
+            consectetur non. Itaque mollitia quasi placeat autem dolores, exercitationem perspiciatis repellat vel
+            architecto, voluptates aliquam consequatur.
+        </p>
+    </header>
+    <h2>Välkommen!</h2>
 </body>
 
 </html>
