first header halfway done

--- a/index.html
+++ b/index.html
@@ -5,15 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header class="header-main">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minus cum earum dolor laboriosam facilis
-            consectetur non. Itaque mollitia quasi placeat autem dolores, exercitationem perspiciatis repellat vel
-            architecto, voluptates aliquam consequatur.
+        <div class="container">
+            <b class="items">
+                <i class="material-icons">check</i>Hämta i varuhus efter 2 timmar
+            </b>
+            <b class="items">
+                <i class="material-icons">check</i>Alltid fri frakt till varuhus
+            </b>
+            <b class="items">
+                <i class="material-icons">check</i>Fri frakt till ombud från 999,-
+            </b>
+            <b class="items">
+                <i class="material-icons">check</i>Öppet köp i 60 dagar
+            </b>
+        </div class="container">
+        <p class="items">
+            JulaClub
         </p>
+        <p class="items">
+            JulaPro - för företag och föreningar
+        </p>
+        <p class="items">
+            Presentkort
+        </p>
+        </div>
     </header>
     <h2>Välkommen!</h2>
 </body>
