fixed more second header

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="header-main">
-        <div class="container">
+        <div class="container flex-settings">
             <b class="items">
                 <i class="material-icons">check</i>Hämta i varuhus efter 2 timmar
             </b>
@@ -24,21 +24,22 @@
             <b class="items">
                 <i class="material-icons">check</i>Öppet köp i 60 dagar
             </b>
-        </div class="container">
-        <p class="items">
-            JulaClub
-        </p>
-        <p class="items">
-            JulaPro - för företag och föreningar
-        </p>
-        <p class="items">
-            Presentkort
-        </p>
+        </div>
+        <div class="container flex-settings set-container-right">
+            <p class="items">
+                JulaClub
+            </p>
+            <p class="items">
+                JulaPro - för företag och föreningar
+            </p>
+            <p class="items">
+                Presentkort
+            </p>
         </div>
     </header>
 
     <header class="header-secondary">
-        <div>
+        <div class="container flex-settings">
             <svg xmlns="http://www.w3.org/2000/svg" width="100" height="40" viewBox="0 0 100 40">
                 <defs>
                     <style>
@@ -91,12 +92,12 @@
                 </g>
             </svg>
             <input class="searchbar" type="text" placeholder="Hej! Vad söker du efter idag?">
-
         </div>
 
 
+
     </header>
-    <h2>Välkommen!</h2>
+
 </body>
 
 </html>
