second header complete

--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
                 </g>
             </svg>
             <input class="searchbar" type="text" placeholder="Hej! Vad söker du efter idag?">
+            <div style="min-width: 40px; min-height: 40px; background-color: #d22630;">
+                <i class="material-icons style-search-icon">search</i>
+            </div>
+            <div style="min-width: 40px; min-height: 40px; background-color: white;">
+                <i class="material-icons style-other-icon">person</i>
+            </div>
+            <div style="min-width: 40px; min-height: 40px; background-color: white;">
+                <i class="material-icons style-other-icon">content_paste</i>
+            </div>
+            <div style="min-width: 40px; min-height: 40px; background-color: white;">
+                <i class="material-icons style-other-icon">shopping_cart</i>
+            </div>
         </div>
 
 
