fixed tertiary header somewhat

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             <b class="items">
                 <i class="material-icons">check</i>Hämta i varuhus efter 2 timmar
             </b>
-            <b class="items">
+            <b class="items hide-size-600">
                 <i class="material-icons">check</i>Alltid fri frakt till varuhus
             </b>
-            <b class="items">
+            <b class="items hide-size-600">
                 <i class="material-icons">check</i>Fri frakt till ombud från 999,-
             </b>
-            <b class="items">
+            <b class="items hide-size-600">
                 <i class="material-icons">check</i>Öppet köp i 60 dagar
             </b>
         </div>
@@ -105,10 +105,21 @@
                 <i class="material-icons style-other-icon">shopping_cart</i>
             </div>
         </div>
-
-
-
     </header>
+
+    <header class="header-tertiary">
+        <div class="container">
+            <b class="items text-size">Produkter <i class="material-icons">keyboard_arrow_down</i></b>
+            <b class="items text-size">Inspiration</b>
+            <b class="items text-size">Nyheter</b>
+            <b class="items text-size">Varumärken</b>
+            <b class="items text-size">Erbjudanden</b>
+            <b class="items text-size">Kalasprodukter!</b>
+        </div>
+        <p class="items">Kundservice</p>
+        <p><i class="material-icons">warehouse</i>Välj varuhus</p>
+    </header>
+
 
 </body>
 
