final commit before first assesment

--- a/index.html
+++ b/index.html
@@ -120,6 +120,29 @@
         <p><i class="material-icons">warehouse</i>Välj varuhus</p>
     </header>
 
+    <main class="main">
+        <div class="video-container">
+            <video autoplay loop controls style="width: 100%; height: auto; margin-top: 2rem;">
+                <source
+                    src="https://assets.cdn.jula.com/dmm3BWSV3/assetstream.aspx?assetid=218909&amp;mediaformatid=10061&amp;destinationid=10016&amp;lastmodified=20240410125420"
+                    type="video/mp4">
+            </video>
+        </div>
+        <div class="image-container">
+            <picture class="image-container">
+                <source media="(min-width: 601px)"
+                    srcset="https://assets.cdn.jula.com/preset:jpgoptimized/w:640/dmm3BWSV3/assetstream.aspx?assetid=132441&amp;mediaformatid=50147&amp;destinationid=10016&amp;lastmodified=20220421114702">
+                <img class="image-style"
+                    src="https://assets.cdn.jula.com/preset:jpgoptimized/w:640/dmm3BWSV3/assetstream.aspx?assetid=132441&amp;mediaformatid=50147&amp;destinationid=10016&amp;lastmodified=20220421114702">
+            </picture>
+            <picture class="image-container">
+                <source media="(min-width: 601px)"
+                    srcset="https://assets.cdn.jula.com/preset:jpgoptimized/w:640/dmm3BWSV3/assetstream.aspx?assetid=151271&amp;mediaformatid=50147&amp;destinationid=10016&amp;lastmodified=20220602153027">
+                <img class="image-style"
+                    src="https://assets.cdn.jula.com/preset:jpgoptimized/w:640/dmm3BWSV3/assetstream.aspx?assetid=151271&amp;mediaformatid=50147&amp;destinationid=10016&amp;lastmodified=20220602153027">
+            </picture>
+        </div>
+    </main>
 
 </body>
 
